# src/track/track.controller.ts
@@ -1,0 +1,51 @@
+import {
+  Controller,
+  Get,
+  Post,
+  Body,
+  Patch,
+  Param,
+  Delete,
+  Put,
+  HttpCode,
+  ParseUUIDPipe,
+  UsePipes,
+} from '@nestjs/common';
+import { TrackService } from './track.service';
+import { CreateTrackDto } from './dto/create-track.dto';
+import { UpdateTrackDto } from './dto/update-track.dto';
+
+@Controller('track')
+export class TrackController {
+  constructor(private readonly trackService: TrackService) {}
+
+  @Post()
+  create(@Body() dto: CreateTrackDto) {
+    return this.trackService.create(dto);
+  }
+
+  @Get()
+  findAll() {
+    return this.trackService.findAll();
+  }
+
+  @Get(':id')
+  @UsePipes(ParseUUIDPipe)
+  findOne(@Param('id', new ParseUUIDPipe()) id: string) {
+    return this.trackService.findOne(id);
+  }
+
+  @Put(':id')
+  update(
+    @Param('id', new ParseUUIDPipe()) id: string,
+    @Body() dto: UpdateTrackDto,
+  ) {
+    return this.trackService.update(id, dto);
+  }
+
+  @Delete(':id')
+  @UsePipes(ParseUUIDPipe)
+  remove(@Param('id') id: string) {
+    return this.trackService.remove(id);
+  }
+}
